# cys-terminal-yijae

./: ARCHITECTURE-AND-PHILOSOPHY.md  CONTRIBUTING.md  Cargo.toml  README.en.md  README.md  USER-MANUAL.md  build.rs  revoked-licenses.json  security-floor.txt  test-evidence.txt
.cargo/: config.toml
.github/workflows/: pack-release.yml  release.yml  windows-build.yml
cysjavis-pack/: agents.json  alerts-config.json  schedule.json
cysjavis-pack/browserd/: README.md  lib.ts  package.json  server.ts
cysjavis-pack/browserd/tests/: pick.test.ts  test_negative_gate.sh  unit.test.ts
cysjavis-pack/browserd/tests/fixtures/: broken.html  ok.html
cysjavis-pack/directives/: CEO_TEMPLATE.md  CSO_DIRECTIVE.md  MASTER_DIRECTIVE.md  ROUTE_CONTRACT.md  RSI_LEARNING_DIRECTIVE.md  VIBECODING_CONSTITUTION.md  VIBECODING_ENFORCEMENT.md  WORKER_DIRECTIVE.md
cysjavis-pack/docs/: BROWSER-OBSERVE-RUNBOOK.md
cysjavis-pack/hooks/: actprobe-kill-gate.sh  completion-guard.sh  cys-hook.sh  grill-arm.sh  grill-stop.sh  guard.sh  inject-context.sh  memory-trigger-inject.sh  pack-guard.sh  role-bootstrap.sh  role-capability-gate.sh  save-state.sh  session-start.sh  test_pre_dispatch.sh  verify-reminder.sh
cysjavis-pack/hooks/vibecoding/: README.md  vibe-distill-nudge.sh  vibe-doc-sync.sh  vibe-regression.sh
cysjavis-pack/round/: EVIDENCE_CONVENTION.md
cysjavis-pack/skills/appbuild-orchestrate-route/: SKILL.md
cysjavis-pack/skills/appbuild-orchestrate-verify/: SKILL.md
cysjavis-pack/skills/eval-driven-self-improvement/: SKILL.md
cysjavis-pack/skills/grill-me/: SKILL.md
cysjavis-pack/skills/rsi-learning-loop/: SKILL.md
cysjavis-pack/skills/script-writer-factcheck/: SKILL.md
cysjavis-pack/skills/vibecoding/: SKILL.md
cysjavis-pack/skills/vibecoding-boundary/: SKILL.md
cysjavis-pack/skills/vibecoding-docs/: SKILL.md
cysjavis-pack/skills/vibecoding-docs/assets/: README.md
cysjavis-pack/skills/vibecoding-docs/assets/agents/: common-task-planner.md  design-agent.md  design-reviewer.md  implementer.md  plan-writer.md  usecase-writer.md
cysjavis-pack/skills/vibecoding-docs/assets/bootstrap/: CLAUDE.md.template
cysjavis-pack/skills/vibecoding-docs/assets/design/: design-principles.md.template  style-guide.md.template
cysjavis-pack/skills/vibecoding-docs/assets/templates/: 1-1_AGENTS.md  1-2_rules.md  1-3_ruler.md  10-1_plan.md  10-2_initial-implement.md  2-10_requirement.md  2-1_root-sot.md  2-2_uepp.md  2-3_scdp.md  2-4_rcmp.md  2-5_persona.md  2-6_project.md  2-7_env.template.md  2-8_tech-stack.md  2-9_codebase-structure.md  3_external-integration.md  4-1_fds.md  4-2_ui.md  4_prd.md  5-1_ux.md  5_userflow.md  6_database.md  7_spec.md  8-1_page-state-mapping.md  8-2_visual.md  8_state-management.md  9-1_test-plan.md  9_test.md
cysjavis-pack/skills/vibecoding-eval/: SKILL.md
cysjavis-pack/skills/vibecoding-knowledge/: SKILL.md
cysjavis-pack/skills/vibecoding-knowledge/assets/knowledge/: nlc-digest-1-levels.md  nlc-digest-2-rules-meta.md  nlc-digest-3-bridge-pipeline.md  nlc-digest-4-state-tdd-implement.md  research-claudecode-practices.md  research-elite-harness.md  research-sdd-ecosystem.md  research-security-eval.md  research-vibecoding-discourse.md
cysjavis-pack/skills/vibecoding-runbook/: SKILL.md
cysjavis-pack/skills/vibecoding-runbook/assets/runbooks/: coding.md  doc-sync.md  hotfix.md  refactor.md  (+6 more)
cysjavis-pack/skills/vibecoding-state/: SKILL.md
cysjavis-pack/skills/vibecoding-tdd/: SKILL.md
cysjavis-pack/skills/vibecoding-verify/: SKILL.md
cysjavis-pack/skills/video-verify/: SKILL.md
cysjavis-pack/skills/video-verify-visual/: SKILL.md
cysjavis-pack/tests/: test_dept_keys_v2.py  test_hud_detail_v11.py  test_hud_office_cc_v13.py  test_resource_gate.py
cysjavis-pack/web/: office-boot.js  office3d.html
cysjavis-pack/web/viewer/: VENDOR-LICENSES.md  app.js  index.html  style.css
dist-win/: cys-x64.wxs  cys.wxs
docs/: ARCHITECTURE-AND-PHILOSOPHY.md  CONTROL_CENTER_DESIGN.md  DESIGN-dept-qualified-keys-v2.md  DESIGN-office-cc-v13.md  DESIGN-office-detail-v11.md  MIGRATION-seed-once-state-restore.md  RELEASE.md  USER-MANUAL.md  alerts_e2e.py  index.html  learn_e2e.py  learn_gaps_tests.py  noshutdown_verify.py
docs/plans/: 2026-07-06-phoenix-hardening-design.md
scripts/: build-macos-signed.sh  bundle-prep.sh  deploy_gate.py  min-binary-policy.sh  release-lane-check.sh  scan-pack-secrets.sh
scripts/win/: swap-cysapp.ps1
src/: lib.rs  license.rs  overrides.rs  pack.rs  packsig.rs
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/src/: main.rs
ui/: index.html  package.json
ui/e2e/: cc_resize_gate.py  office_cc_gate.py  office_detail_gate.py  wsbar_gate.py
ui/src/: appearance.test.ts  appearance.ts  ccscale.test.ts  ccscale.ts  deptlabel.test.ts  deptlabel.ts  drainverify.test.ts  drainverify.ts  ftdrop.test.ts  ftdrop.ts  ime.test.ts  ime.ts  layout.test.ts  layout.ts  main.ts  purgeconfirm.test.ts  purgeconfirm.ts  style.css  transfer.test.ts  transfer.ts  updateplan.test.ts  updateplan.ts  webpane.test.ts  webpane.ts  wsbar.test.ts  wsbar.ts
