[package]
name = "cys-app"
version = "0.12.63"
edition = "2021"
description = "cys UI shell (Tauri 2) — thin client over the cysd socket"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["net", "io-util", "time"] }
base64 = "0.22"
cys = { package = "cys-terminal", path = ".." }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
